completed most of navbar, missing logo/completed basics for search container

--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
 <body>
 
     <div class="navbar">
-        <div class="leftbox">Abstract | Help Center</div>
+        <div class="leftbox">
+            <a class="homelink" href="https://www.abstract.com/">Abstract</a>
+            |
+            <a class="helplink" href="index.html">Help Center</a>
+        </div>
         <div class="rightbox">
-            <button class="requestbtn">Submit a request</button>
-            <button class="signinbtn">Sign in</button>
+            <button class="navbtn requestbtn">Submit a request</button>
+            <button class="navbtn signinbtn">Sign in</button>
         </div>
     </div>
 
-    <div class="search-container"></div>
+    <div class="search-container">
+        <header class="mainheader">How can we help?</header>
+        <input class="searchinput" placeholder="Search" type="text">
+    </div>
 
     <div class="container"></div>
 
